# robotpy-wpilib-utilities

./: .gitignore  .gittrack  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  testing-requirements.txt  travis-requirements.txt
.github/workflows/: dist.yml
cdl/: driver_base.py  xl_max_sonar_ez.py
cdl/tests/: test_units.py  test_xl_max_sonar_ez.py
commandbased/: __init__.py  cancelcommand.py  command.py  commandbasedrobot.py  conditionalcommand.py  flowcontrol.py  instantcommand.py  stopcommand.py  timedcommand.py
devtools/: build_and_deploy.sh  exclude_commits_navx
docs/: api.rst  commandbased.rst  conf.py  index.rst  magicbot.rst  requirements.txt  robotpy_ext.autonomous.rst  robotpy_ext.common_drivers.navx.rst  robotpy_ext.common_drivers.rst  robotpy_ext.control.rst  robotpy_ext.misc.rst  samples.rst
magicbot/: __init__.py  commands.py  inject.py  magic_reset.py  magic_reset.pyi  magic_tunable.py  magicbot_tests.py  magiccomponent.py  magicrobot.py  state_machine.py
robotpy_ext/: __init__.py
robotpy_ext/autonomous/: __init__.py  selector.py  selector_tests.py  stateful_autonomous.py
robotpy_ext/common_drivers/: README.rst  distance_sensors.py  distance_sensors_sim.py  driver_base.py  pressure_sensors.py  units.py  xl_max_sonar_ez.py
robotpy_ext/common_drivers/navx/: __init__.py  ahrs.py  continuousangletracker.py  inertialdataintegrator.py  offsettracker.py  pins.py  registerio.py  registerio_i2c.py  registerio_spi.py  types.py
robotpy_ext/common_drivers/navx/_impl/: __init__.py  ahrsprotocol.py  imuprotocol.py  imuregisters.py  sim_io.py
robotpy_ext/common_drivers/tests/: test_xl_max_sonar_ez.py
robotpy_ext/control/: button_debouncer.py  toggle.py  xbox_controller.py
robotpy_ext/misc/: __init__.py  annotations.py  asyncio_policy.py  crc7.py  looptimer.py  orderedclass.py  periodic_filter.py  precise_delay.py  simple_watchdog.py
robotpy_ext/physics/: core.py  drivetrains.py  utilites.py
samples/command_based/commands/: crash.py  followjoystick.py  setspeed.py
samples/navx_rotate_to_angle/: robot.py
samples/stateful_autonomous/: robot.py
samples/stateful_autonomous/autonomous/: chained.py  feature_example.py
tests/: conftest.py  magicbot_annotation_tester.py  run_tests.sh  test_distance_sensors.py  test_flowcontrol.py  test_magicbot_commands.py  test_magicbot_feedback.py  test_magicbot_inject.py  test_magicbot_injection.py  test_magicbot_sm.py  test_magicbot_tunable.py  test_misc_precise_delay.py  test_navx.py  test_placeholder.py  test_pressure_sensor.py  test_toggle.py  test_units.py  test_xl_max_sonar_ez.py
