[metadata]
name = robotpy-wpilib-utilities
description = Useful utility functions/objects for RobotPy
long_description = file: README.rst
long_description_content_type = text/x-rst
author = RobotPy Development Team
author_email = robotpy@googlegroups.com
url = https://github.com/robotpy/robotpy-wpilib-utilities
license = BSD-3-Clause
# Include the license file in wheels.
license_file = LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pynetworktables>=2020.0.0
    wpilib>=2021.1.2.0,<2022.0.0
setup_requires =
    setuptools_scm == 5.0.*
python_requires = >=3.6

[options.package_data]
magicbot = py.typed, magic_reset.pyi