[metadata]
name = robotpy-wpilib-utilities
description = Useful utility functions/objects for RobotPy
long_description = file: README.rst
long_description_content_type = text/x-rst
author = RobotPy Development Team
author_email = robotpy@googlegroups.com
url = https://github.com/robotpy/robotpy-wpilib-utilities
license = BSD-3-Clause
# Include the license file in wheels.
license_file = LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    wpilib>=2025.0.0b2,<2026
setup_requires =
    setuptools_scm > 6
python_requires = >=3.9

[options.package_data]
magicbot = py.typed, magic_reset.pyi
